; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp-tls/extr_esp_tls_wolfssl.c_esp_wolfssl_verify_certificate.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp-tls/extr_esp_tls_wolfssl.c_esp_wolfssl_verify_certificate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@WOLFSSL_SUCCESS = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Failed to verify peer certificate %d!\00", align 1
@ERR_TYPE_WOLFSSL_CERT_FLAGS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"Certificate verified.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_wolfssl_verify_certificate(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to i32*
  %8 = call i32 @wolfSSL_get_verify_result(i32* %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @WOLFSSL_SUCCESS, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %11, label %21

11:                                               ; preds = %1
  %12 = load i32, i32* @TAG, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @ESP_LOGE(i32 %12, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @ERR_TYPE_WOLFSSL_CERT_FLAGS, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @ESP_INT_EVENT_TRACKER_CAPTURE(i32 %17, i32 %18, i32 %19)
  br label %24

21:                                               ; preds = %1
  %22 = load i32, i32* @TAG, align 4
  %23 = call i32 @ESP_LOGI(i32 %22, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  br label %24

24:                                               ; preds = %21, %11
  ret void
}

declare dso_local i32 @wolfSSL_get_verify_result(i32*) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i32) #1

declare dso_local i32 @ESP_INT_EVENT_TRACKER_CAPTURE(i32, i32, i32) #1

declare dso_local i32 @ESP_LOGI(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
